Ajustes na estrutura e mudança nome classes.
